# rfx

./: .gitignore  BUILD_ALL.sh  CMakeLists.txt  Makefile  README.md  effects.js  index.html  manifest.json  param_interface.h  player.html  player.js  regroove-effects.js  regroove-effects.wasm  regroove_effects.c  regroove_effects.h  service-worker.js  styles.css  synth-ui.js  synth.html  synth.js  wasm-mappings.json  wasm-processor.js  wasm_bindings.c
common/: cpu_6502.h  sample_loader.h  sdl_audio_init.h
common/audio_viz/: Makefile  audio_viz_wasm.c  vu_meter.h  waveform.h
components/: freq-bars-analyzer.js  piano-keyboard.js  vu-meter.js  waveform-display.js
data/: sid_presets.json  sid_user_presets.txt
data/ahx/: README.md  arp.ahxp  kick.ahxp  snare.ahxp
data/rg1piano/: sample_data.h
effects/: README.md  fx_amiga_filter.c  fx_amiga_filter.h  fx_common.h  fx_compressor.c  fx_compressor.h  fx_compressor_ui.h  fx_crossfader.c  fx_crossfader.h  fx_delay.c  fx_delay.h  fx_delay_ui.h  fx_distortion.c  fx_distortion.h  fx_distortion_ui.h  fx_eq.c  fx_eq.h  fx_eq_ui.h  fx_fader.c  fx_fader.h  fx_filter.c  fx_filter.h  fx_filter_ui.h  fx_freqshift.c  fx_freqshift.h  fx_freqshift_ui.h  fx_granular_shared.h  fx_limiter.c  fx_limiter.h  fx_lofi.c  fx_lofi.h  fx_math_compat.h  fx_model1_hpf.c  fx_model1_hpf.h  fx_model1_lpf.c  fx_model1_lpf.h  fx_model1_sculpt.c  fx_model1_sculpt.h  fx_model1_trim.c  fx_model1_trim.h  (+20 more)
engine/: README.md  regroove_engine.c  regroove_engine.h
examples/: sdl_integration_example.cpp
include/: regroove_unified.h  regroove_unified_example.c
logue/: README.md  build-all.sh  build-drum.sh  build-effect.sh  build-microkorg2.sh  build-nts1mk2.sh  build-synth.sh
logue-sdk-effects/: README.md  build-all.sh
logue-sdk-effects/compressor/: manifest.json
logue-sdk-effects/delay/: manifest.json  project.mk  regroove_delay_v2.cpp
logue-sdk-effects/distortion/: manifest.json  regroove_distortion.cpp  regroove_distortion_v2.cpp
logue-sdk-effects/eq/: manifest.json  project.mk
logue-sdk-effects/filter/: manifest.json  project.mk
logue-sdk-effects/model1_hpf/: project.mk
logue-sdk-effects/model1_lpf/: project.mk
logue/amigafilter/: README.md  config.mk  effect.h  header.c  manifest.json
logue/common/: regroove_paths.h
logue/compressor/: config.mk  effect.h  header.c  manifest.json  project.mk  (+1 more)
midi/: midi_handler.h  midi_handler_android.cpp  midi_handler_android_impl.h  midi_handler_desktop.cpp
players/: ahx_player.c  ahx_player.h  deck-player.js  deck-player.wasm  deck_player.c  deck_player.h  mmd_player.c  mmd_player.h  mod_player.c  mod_player.h  modmed-player.wasm  pattern_sequencer.c  pattern_sequencer.h  regroove-effects.js  regroove-effects.wasm  regroove_controller.c  regroove_controller.h  sid_player.c  sid_player.h  tracker_mixer.h  tracker_sequence.c  tracker_sequence.h  tracker_voice.c  tracker_voice.h
plugins/: Makefile  README.md  fx_amiga_filter_ui.h  fx_compressor_ui.h  fx_distortion_ui.h  fx_filter_ui.h  fx_limiter_ui.h  fx_lofi_ui.h  fx_paula_blep_ui.h  fx_phaser_ui.h  fx_pitchshift_ui.h  fx_resampler_ui.h  fx_reverb_ui.h  fx_stereo_widen_ui.h  regroove_ui_helpers.hpp  rfx_imgui_wrapper.h  rfx_plugin_utils.h  rfx_ui_utils.h
plugins/RegrooveFX/: CMakeLists.txt  DistrhoPluginInfo.h  Makefile  Makefile.dsp  Makefile.noui  README.md  RegrooveFXPlugin.cpp  RegrooveFXUI.cpp  RegrooveFXUI_Simple.cpp
rack/: Makefile  build-linux.sh  build-windows.sh  regroove_components.hpp
synth/: Makefile  ahx_instrument.c  ahx_instrument.h  ahx_player.c  ahx_player.h  ahx_plist.c  ahx_plist.h  ahx_preset.c  ahx_preset.h  ahx_synth_core.c  ahx_synth_core.h  ahx_waves.c  ahx_waves.h  bass_station.c  bass_station.h  check_drums.sh  cpu_6502.c  deck_player.c  deck_player.h  mmd_player.c  mmd_player.h  mod_player.c  mod_player.h  render_drums  rg404_drum_synth.c  rg909_bd.c  rg909_bd.h  rg909_drum_synth.c  rg909_drum_synth.h  rg909_sd.c  rg909_sd.h  rgsfz_player_wasm.c  rgslicer.c  rgslicer.h  rgslicer_detect.c  rgslicer_sfz.c  sample_fx.c  sample_fx.h  sfz_parser.c  sfz_parser.h  (+60 more)
synths/: drum-worklet-processor.js  rg1piano.js  rg1piano.wasm  rg909-drum.js  rg909-drum.wasm  rgahxdrum.js  rgahxdrum.wasm  rgahxsynth.js  rgahxsynth.wasm  rgresonate1-synth.js  rgresonate1-synth.wasm  rgsidsynth.js  rgsidsynth.wasm  rgslicer.js  rgslicer.wasm  synth-worklet-processor.js
test/: generate_acid_techno.py  generate_rg101_test.py  generate_rg20_test.py  generate_rg303_test.py  generate_rg808_test.py  rg303_accent_test.mid  rg303_acid_techno.mid  rg303_slide_test.mid  rg303_test_accent.mid  rg303_test_classic_acid.mid  rg303_test_filter_sweep.mid  rg303_test_phuture.mid  rg303_test_range.mid  rg808_breakbeat.mid  rg808_classic_pattern.mid  rg808_drum_test.mid  rg808_four_on_floor.mid  test_player.js  test_wasm.js
tools/: Makefile  ahx_instrument_test.c  ahx_preset_to_c.c  analyze_attack_envelope.py  analyze_real_909.py  build_synth.sh  check_drums.py  check_drums.sh  compare_attack.py  generate_blep_tables.c  render_drums  render_drums.c  test_c_kick.c
tools/ahx_wave_dump/: CMakeLists.txt  ahx_wave_dump.c  build-windows.sh  build.sh
tools/ahxplayer/: CMakeLists.txt  ahx_player_test  ahx_player_test.c  build-linux.sh  build-windows.sh  build_ahx_player.sh
tools/deckplayer/: CMakeLists.txt  build-linux.sh  build-windows.sh  deckplayer.c
tools/medplayer/: CMakeLists.txt  build-linux.sh  build-windows.sh  build_med_player.sh  med_player_test.c
tools/medplayer/build-windows/: Makefile
tools/modplayer/: CMakeLists.txt  build-linux.sh  build-windows.sh  build_mod_player.sh  dump_samples.c  mod_player_test.c  verify_load.c
tools/modplayer/build-windows/: Makefile
ui/: regroove_ui.h
web/: .gitignore  Makefile  audio-worklet-processor.js  build-all-synths.sh  build-deck-player.sh  effects-webaudio.js  effects.js  fader-components.js  index.html  main.js  package.json  pad-knob.js  player.html  player.js  service-worker.js  styles.css  svg-slider.js  synth-registry.js  synth-ui.js  synth.html  synth.js  update-wasm-mappings.py
(+452 files in other folders)
